@@ -1,1 +1,1 @@
-DIST bzrtp-1.0.2.tar.gz 459416 SHA256 42dcfde9d380cfc03fe9924047e2a35164dc74f328397fdf36fd8458959aee02 SHA512 f214f04aaa4a4ce400d4547ab009200fe59bcb49d010165e79e857ef37c43347b0fab7e1a92576fa7e0a3e8b14c70de58d80857a3259ec8ecdfcc49130c97e3d WHIRLPOOL f8dc20e8878d7e1a4058c3c46463af7cec2fe40488eecc04929df65345f4a8eae4261bed918fac9bd5e5f8591b8f1e43e80e095ef73f890f9856f8a495448bad
+DIST bzrtp-1.0.3.tar.gz 459897 SHA256 c89cf7e3371408795814ac2eea8ff7783831e9ee1ae161d2583923397589f74b SHA512 e0cb5da451a6517dc27b57d4833c9a4cb1a6f31f84b24c35498f35bca522ff94193b7cfb5d41fd267028afd5cf1d9ae7eb2ef3cad93ac2aea00e3e724fc1c187 WHIRLPOOL 0263b53ab68460f349b9daa1d21b8c7f01cc2918bb09995766a3f6c921410b07502c46c7f8ab2610698463337a14f437c235864fc89e8906b37a9ca156ec8003
