@@ -1,3 +1,9 @@
+*bzrtp-1.0.3 (04 Nov 2015)
+
+  04 Nov 2015; Guillaume Horel <guillaume.horel@gmail.com> +bzrtp-1.0.3.ebuild,
+  -bzrtp-1.0.2.ebuild:
+  net-libs/bzrtp: version bump
+
   25 Aug 2015; Guillaume Horel <guillaume.horel@gmail.com> bzrtp-1.0.2.ebuild:
   net-libs/bzrtp: add dependency
 
